<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_schedule"
        android:enabled="true"
        android:icon="@drawable/calendar"
        android:title="@string/schedule"/>
    <item
        android:id="@+id/nav_grades"
        android:enabled="true"
        android:icon="@drawable/grades"
        android:title="@string/grades"/>
    <item
        android:id="@+id/nav_messages"
        android:enabled="true"
        android:icon="@drawable/messages"
        android:title="@string/messages"/>
    <item
        android:id="@+id/nav_account"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/account"/>
</menu>
